plugins {
    id 'java'
    id 'net.ltgt.apt' version '0.10'
}

group 'kirilenko.cli'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'com.google.guava', name: 'guava', version: '23.5-jre'
    compile group: 'org.jetbrains', name: 'annotations', version: '13.0'
    compile group: 'args4j',             name: 'args4j',        version: '2.0.25'
    compile group: 'args4j',             name: 'args4j-site',   version: '2.0.25'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
}

jar {
    manifest {
        attributes 'Main-Class': 'kirilenko.cli.Main'
    }
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}